# resoul

./: .env  .gitignore  .workspace.md  Dockerfile  README.md  pyproject.toml
.claude/agents/: bug-solver.md
src/resoul/: __main__.py  csm_inprogress.py  mp_utils.py  tts_api.py
src/resoul/experiments/: modified_api.py
src/resoul/openvoice/: api.py  attentions.py  mel_processing.py  models.py  modules.py  openvoice_app.py
src/resoul/openvoice/text/: __init__.py  cleaners.py
